--- a/whadup/templates/base_layout.html
+++ b/whadup/templates/base_layout.html
@@ -7,6 +7,22 @@
     <title>WHADUP</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
 </head>
+<header>
+    <nav class="main-nav">
+        <ul>
+            {% if user.is_authenticated %}
+            <li><form action="{% url 'accounts:logout' %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Logout">
+            </form></li>
+            <li><a href="{% url 'articles:article_create' %}">Post smthn</a></li>
+            {% else %}
+                <li><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
+                <li><a href="{% url 'accounts:login' %}">Login</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+</header>
 <body>
     <div class="wrapper">
         {% block content %}
